# search-engine

./: .env.example  CODE_EXPLANATION.md  FUTURE_DEVELOPMENT_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml  requirements-dev.txt
apps/api/app/: config.py  logging_utils.py  main.py  models.py  opensearch_client.py  search_service.py  text.py
apps/api/vn_news_search_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
scripts/ingest_index/: clean_articles.py  common.py  index_articles.py
services/opensearch/: README.md
services/opensearch/synonyms/: news_synonyms.txt
tests/: test_clean_articles.py  test_search_query.py  test_search_service_missing_indexes.py
